yaml/overlay/affinity.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildbot-master
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nodetype
                    operator: In
                    values:
                      - general
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ops-view-redis
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nodetype
                    operator: In
                    values:
                      - general
